# mallib

./: .gitignore  .ninja  CMakeLists.txt.txt  a.out  imgui.ini  new_theme.tmTheme  readme.md  todo.txt  unfinished_cmake.txt  vec3_cross_test.cc
fps/: cpp.hint  fps.sublime-project  fps.sublime-workspace  meson.build  readme.md
fps/_deprecated/: __bucket_array.h  __entity_manager.h  __macro__entity_manager.h  collision_system.cc  evaluate_flying_units.cc
fps/assets/___models/: spear.mtl
fps/assets/audacity/: plop.aup
fps/assets/blender/: arrow.blend  bar.blend  bar.mtl  spear.blend  spear.blend1
fps/assets/maps/: AABB.map
fps/assets/shaders/debug_geometry/: debug_geometry.frag  debug_geometry.vert
fps/assets/shaders/debug_position_world/: debug_position_world.frag  debug_position_world.vert
fps/assets/shaders/deferred_edges/: deferred_edges.fs
fps/assets/shaders/deferred_geometry/: deferred_geometry.frag  deferred_geometry.fs  deferred_geometry.vert  deferred_geometry.vs
fps/assets/shaders/deferred_instanced/: deferred_instanced.frag  deferred_instanced.fs  deferred_instanced.vs
fps/assets/shaders/deferred_instanced_pbr/: deferred_instanced_pbr.frag  deferred_instanced_pbr.vert
fps/assets/shaders/deferred_instanced_pbr_no_mvp/: deferred_instanced_pbr_no_mvp.frag  deferred_instanced_pbr_no_mvp.vert
fps/assets/shaders/deferred_lighting/: deferred_lighting.fs
fps/assets/shaders/deferred_normals/: deferred_normals.frag  deferred_normals.fs
fps/assets/shaders/deferred_obra_dinn/: deferred_obra_dinn.frag  deferred_obra_dinn.fs  deferred_obra_dinn.vs
fps/assets/shaders/deferred_parallax_pbr/: deferred_parallax_pbr.frag  (+1 more)
fps/ideas/VM/: main.cc  vm_types.h
fps/include/glad/: glad.h
fps/include/imgui/: imconfig.h
fps/include/log/: log.h
fps/include/task/: task_system.h
fps/libraries/: what_should_be_here.txt.txt
fps/src/: AABB.h  _draw_3d_api_deprecated  _render_system_deprecated.cc  asset_manager.cc  asset_manager.h  bsp.cc  bsp.h  bucket_array.h  camera.h  collision_system.h  command_system.cc  command_system.h  components.h  cvar.cc  cvar.h  cvar_system.cc  cvar_system.h  debug_menu.h  debug_output.plan  draw2d_api.plan  draw3d.h  draw3d_api.h  entity_container.h  entity_manager.cc  entity_manager.h  entity_system.cc  entity_system.h  file.h  file_watcher.h  game.cc  game.h  game_combat.cc  game_end_frame.cc  game_init.cc  game_player_movement.cc  game_render.cc  game_simulate.cc  game_weapons.cc  glfw_wrapper.cc  glfw_wrapper.h  (+42 more)
fps/static_libraries/soloud/: soloud.lib
fps/sublime_vs2019_shell_package/: Preferences.sublime-settings  ninja.sublime-build  set_vc_vars.py
fps/subprojects/fmt/: meson.build
fps/subprojects/glfw-3.3.2/: cmake2meson.py  meson.build  meson_options.txt
fps/subprojects/imgui/: CmakeLists.txt  meson.build  to_compile.txt.txt
fps/tests/: stl_container_baseline.h  task_system.cc
fps/tests/bsp/: bsp_test.cc
fps/tests/bucket_array/: bucket_array_test.cc
fps/tests/command_system/: command_test.cc  to_compile.txt
fps/tests/cvar_system/: cvar_test.cc  to_compile.txt
fps/tests/entity_manager/: entity_manager_test.cc
fps/tests/iterator_test/: active_entity_iterator_test.cc  bucket_iterator_test.cc  custom_rule_iterator_test.cc  custrom_rule_iterator_test.cc  nested_iterator_test.cc  node_iterator.cc  template_bucket_iterator_test.cc
(+397 files in other folders)
